# VoidScapeDev

./: .gitignore  .gitignore__  .gitmodules  App.cpp  App.hpp  CMakeLists.txt  CMakeSettings.json  Game.sln  Game.vcxproj  Game.vcxproj.filters  Output-Build.txt  README.md  build_x64-clang-debug.bat  build_x64-clang-debug.sh  build_x64-clang-release.bat  build_x64-clang-release.sh  build_x64-clang-relwithdebinfo.bat  build_x64-clang-relwithdebinfo.sh  clang_toolchain.cmake  clean_ALL_build_files.sh  clean_MY_build_files.sh  clean_build_Arts_in_out.sh  download_dependencies.bat  main.cpp
Actors/: Actor.cpp  Actor.hpp  BlackHole.cpp  BlackHole.hpp  EscapePortal.cpp  GameEntity.cpp  GameObject.cpp  GameObject.hpp
Apps/Sandbox/: CMakeLists.txt
Apps/Sandbox/src/: Sandbox.cpp  main.cpp
CoriEngine/: CMakeLists.txt  generate_export_header_script.cmake
CoriEngine/assets/shaders/: QuadFrag.glsl  QuadInstancedFrag.glsl  QuadInstancedVert.glsl  QuadVert.glsl  defaultFrag.glsl  flatColorQuadFrag.glsl  texturedQuadFrag.glsl  texturedQuadVert.glsl
CoriEngine/include/: Cori.hpp  CoriEntry.hpp  Macros.hpp  UserDefines.hpp  coriengine_export.hpp
CoriEngine/internal_headers/: App_pch.hpp  Cori_pch.hpp  DummyHeader.hpp  Global_pch.hpp  Macros.hpp
CoriEngine/src/AssetManager/: AssetManager.cpp  AssetManager.hpp  FileManager.cpp  FileManager.hpp
CoriEngine/src/Core/: Application.cpp  Application.hpp  AutoRegisteringFactory.hpp  CoriKeycodes.hpp  CoriMouseCodes.hpp  Engine.cpp  Engine.hpp  EntryPoint.hpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  Logger.cpp  Logger.hpp  Tile.cpp  WindowImpl.cpp
CoriEngine/src/Core/DataStructures/: PackedArray.hpp
CoriEngine/src/CoriCore/: Application.cpp  Application.hpp  AutoRegisteringFactory.hpp  Engine.cpp  Engine.hpp  EngineEntry.cpp  EngineEntry.hpp  EntryPoint.hpp  FileManager.cpp  FileManager.hpp  Input.cpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logger.cpp  Logger.hpp  SelfFactory.hpp  Tile.cpp  Tile.hpp  Time.cpp  Time.hpp  Window.hpp  WindowImpl.cpp  WindowImpl.hpp  main.cpp
CoriEngine/src/CoriCore/AssetManager/: AssetDefenitions.hpp  AssetDefinitions.hpp  AssetManager.cpp  AssetManager.hpp  FileManager.cpp  FileManager.hpp  ShaderDescriptor.hpp  SpriteAtlasDescriptor.hpp  Texture2DDescriptor.hpp
CoriEngine/src/CoriCore/ECS/: Components.hpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  TriggerManager.cpp  TriggerManager.hpp
CoriEngine/src/CoriCore/EventSystem/: AppEvent.hpp  CoriKeycodes.hpp  CoriMouseCodes.hpp  Event.hpp  GameEvents.hpp  KeyEvent.hpp  MouseEvent.hpp
CoriEngine/src/CoriCore/FSM/: State.hpp  StateMachine.hpp
CoriEngine/src/CoriCore/ImGui/: IGWrapper.cpp  IGWrapper.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  debug_imgui_renderer.h
CoriEngine/src/CoriCore/Math/: Math.cpp  Math.hpp
CoriEngine/src/CoriCore/Physics/: Physics.cpp  Physics.hpp  World.hpp  test.hpp
CoriEngine/src/CoriCore/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
CoriEngine/src/CoriCore/Profiling/: FactoryBaseCRTP.hpp  InstanceMetrics.hpp  TimeProfiler.cpp  TimeProfiler.hpp  Trackable.hpp
CoriEngine/src/CoriCore/Renderer/: Buffers.cpp  Buffers.hpp  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  CoriGraphicsAPI.cpp  CoriGraphicsAPI.hpp  GraphicsCall.cpp  GraphicsCall.hpp  Image.cpp  Image.hpp  PipelineProgram.cpp  PipelineProgram.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RenderingContext.cpp  RenderingContext.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  SpriteAtlas.cpp  SpriteAtlas.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
CoriEngine/src/CoriCore/Renderer/Animation/: Animation.hpp  AnimationHandle.hpp  Animator.hpp
CoriEngine/src/CoriCore/Renderer/OpenGL/: GL_Buffers.cpp  GL_Buffers.hpp  GL_GraphicsAPI.cpp  GL_GraphicsAPI.hpp  GL_GraphicsContext.cpp  GL_GraphicsContext.hpp  GL_PipelineProgram.cpp  GL_PipelineProgram.hpp  GL_ShaderProgram.cpp  GL_ShaderProgram.hpp  GL_Texture.cpp  GL_Texture.hpp  GL_VertexArray.cpp  GL_VertexArray.hpp
CoriEngine/src/CoriCore/Renderer/ShaderTemp/: defaultFrag.glsl  defaultVert.glsl
CoriEngine/src/EventSystem/: GameEvents.hpp  KeyEvent.hpp  MouseEvent.hpp
CoriEngine/src/FileManagment/: JsonSerializer.hpp
CoriEngine/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiPresets.hpp
CoriEngine/src/Math/: Math.cpp  Math.hpp
CoriEngine/src/Physics/: Physics.cpp  Physics.hpp
CoriEngine/src/Physics/Triggers/: Trigger.cpp  Trigger.hpp  TriggerBehaviour.hpp
CoriEngine/src/Profiling/: InstanceMetrics.hpp  TimeProfiler.hpp
CoriEngine/src/Renderer/: Buffers.cpp  Buffers.hpp  Camera.cpp  CameraComponent.hpp  CameraController.cpp  CameraController.hpp  CoriGraphicsAPI.cpp  CoriGraphicsAPI.hpp  GraphicsAPIs.hpp  GraphicsCall.cpp  GraphicsCall.hpp  Image.cpp  PipelineProgram.cpp  Renderer2D.cpp  Renderer2D.hpp  Renderer2DNew.cpp  Renderer2DNew.hpp  RenderingContext.cpp  RenderingContext.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  SpriteAtlas.cpp  SpriteAtlas.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp
CoriEngine/src/Renderer/Animator/: AnimationFrame.hpp  AnimationHandle.hpp  Animator.cpp  Animator.hpp
CoriEngine/src/Renderer/OpenGL/: GL_Buffers.cpp  GL_Buffers.hpp  GL_GraphicsAPI.cpp  GL_GraphicsAPI.hpp  GL_GraphicsContext.cpp  GL_GraphicsContext.hpp  GL_ShaderProgram.cpp  GL_ShaderProgram.hpp  GL_Texture.cpp  GL_Texture.hpp  GL_VertexArray.cpp  GL_VertexArray.hpp
CoriEngine/src/SceneSystem/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  TriggerManager.cpp  TriggerManager.hpp
CoriEngine/src/StateSystem/: State.hpp  StateMachine.hpp
Game/: App.cpp  App.hpp  Game.sln  Game.vcxproj  Game.vcxproj.filters  README.md
Graphics/: AnimationHandler.cpp  AnimationHandler.hpp  Camera.cpp  PipelineProgram.cpp  Sprite.cpp  Texture.cpp
InternalLogic/: StateMachine.cpp  StateMachine.hpp
Physics/: CollisionHandler.cpp  MovementHandler.cpp  MovementHandler.hpp  PhysicsComponent.cpp  VSMath.cpp  (+2 more)
(+243 files in other folders)
